[#209] Cards: Resouces - button alignment fix (#215)

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -212,16 +212,43 @@
      box-shadow: 0 2px 6px #0000001f, 0 4px 25px #00000024;
      transition: 0.3s transform cubic-bezier(.155, 1.105, .295, 1.12), 0.3s box-shadow;
      flex-grow: 1;
+     display: flex;
+     flex-direction: column;
  }
 
  .cards.animation>ul>li .card-wrapper:hover {
      box-shadow: 0 8px 54px #0003, 0 4px 8px #0000003b;
  }
 
+ .cards.resources.center .cards-card-body .button-container {
+    text-align: center;
+    margin-top: auto;
+ }
+
+ .cards.resources .cards-card-body ul {
+    padding-left: 2rem;
+    list-style: disc;
+ }
+
+ .cards.resources .cards-card-body ul > li {
+    margin-bottom: 0;
+ }
+
  .cards.resources>ul>li .icon {
      display: inline-block;
      height: 100%;
      width: auto;
+ }
+
+ .cards.resources .cards-card-body {
+    text-align: left;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+ }
+
+ .cards.resources .cards-card-body:nth-of-type(2) {
+    flex: 1;
  }
 
  .cards.resources .cards-card-body .icon-masked {
